Install lsp dependencies

--- a/jupyterlab/Dockerfile
+++ b/jupyterlab/Dockerfile
@@ -22,6 +22,7 @@ RUN pip install --quiet -U kaleido
 RUN pip install --quiet jedi==0.17.2
 RUN pip install --quiet python-language-server
 RUN pip install --quiet jupyterlab-lsp
+RUN pip install --quiet pydocstyle pycodestyle mccabe pyflakes pylint rope yapf autopep8
 
 # install code formatter
 RUN pip install --quiet jupyterlab_code_formatter isort black
